[package]
name = "castle"
version = "0.1.0"
authors = ["haslersn <sebastian.hasler@gmx.net>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
env_logger = "0.6"
hex = "0.3"
log = "0.4"
mcp23x17 = { git = "https://github.com/haslersn/mcp23x17-rs" }
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
spidev = "0.3"
toml = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
